--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ certifi==2021.10.8
 charset-normalizer==2.0.7
 idna==3.3
 python-engineio==4.2.1
-python-socketio==5.4.1
+python-socketio[client]==5.4.1
 requests==2.26.0
 urllib3==1.26.7
