Add `param dump` to cli

--- a/examples/config.json
+++ b/examples/config.json
@@ -5,7 +5,8 @@
         "subparam": {
             "subparam1": "value1",
             "subparam2": "value2"
-        }
+        },
+        "subparam.using.dot.notation": 12345
     },
     "node2": {
         "param3": "value3",
