--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-#
-# Installs dependencies from ./setup.py, and the package itself, in editable
-# mode. This means the files are symlinked into the installation path, allowing
-# changes in the repo without having to re-install the package.
-# -e .
-
-# (the -e above is optional). you could also just install the package
-# normally with just the line below (after uncommenting)
-.
+pyyaml==6.0
+click==8.0.3
+redis==3.5.3
+numpy==1.20.3
+# numba==0.54.1
+# scipy==1.7.2
+numpy-quaternion==2021.11.4.15.26.3
+requests==2.26.0
+pyro4==4.81
